--- a/About Us.html
+++ b/About Us.html
@@ -60,173 +60,105 @@
       </div>
     </nav>
 
-    <!--jumobtron-->
-    <div class="jumbotron"></div>
+      <!--jumobtron-->
+      <div class="banner">
+        <img class="banner-img"
+        src="C:\Users\mynam\Documents\Website\CVT new photos\about_us.jpg"
+        alt="innovation">
+      </div>
 
-    <div class="container">
+
+
+    <div class="outer">
       <!--mission statement-->
-      <div class="container">
-        <h2>Our Mission</h2>
-        <p>Critical Validation Technologies (CVT)
-        is an amalgamation of industry experts who have elected to
-        work in synergy to bring the best in calibration and
-        validation services to the pharmaceutical, biopharmaceutical,
-         nutraceutical and allied industries.&nbsp; We are proficient
-         through industry experience and get the job done right,
-         the first time every time.&nbsp;
-         CVT is reshaping how North America companies implement
-         and qualify equipment and processes. Our strategic focus
-         is sharpened by what we do best: Calibration and Qualification.
-         Whether it's a small project or a challenging facility wide
-         initiative we have the expertise.</p>
-      </div>
-
-
-      <!--values-->
-      <div class="container">
-        <h2>Our Values</h2>
-        <p>Even though the North American
-        business landscape may be changing, our commitment to
-        quality has not. We conduct our business ethically and
-        responsibly. The compliance and satisfaction of clients
-        is paramount to CVT and is the core principal upon
-        which the company is founded.</p>
-      </div>
-
-      <!--Introduce the team-->
-      <div class="container" style="padding-top:100px; padding-bottom:50px;">
-        <div class="container-fluid" style="padding-bottom:30px;">
-          <h1 class="text-center">Our Team</h1>
-          <p>Our people are the foundation of
-          our success. CVT has greater than 100 years of combined
-           calibration and validation experience.  Our staff
-           utilize their experiences to decrease costs, increase
-           output and ensure quality.  With the industry and
-           regulatory expertise our employees share means that
-           the job gets done on time, under budget, and in a
-           compliant manner. </p>
+        <div class="inner">
+          <div class="inner_cont">
+            <h2>About Us</h2>
+            <br />
+            <p>Critical Validation Technologies (CVT)
+            is an amalgamation of industry experts who have elected to
+            work in synergy to bring the best in calibration and
+            validation services to the pharmaceutical, biopharmaceutical,
+             nutraceutical and allied industries.&nbsp; We are proficient
+             through industry experience and get the job done right,
+             the first time every time.&nbsp;
+             CVT is reshaping how North America companies implement
+             and qualify equipment and processes. Our strategic focus
+             is sharpened by what we do best: Calibration and Qualification.
+             Whether it's a small project or a challenging facility wide
+             initiative we have the expertise.</p>
+          </div>
         </div>
-          <div class="row">
-
-              <!--first col -->
-            <div class="col">
-              <div class="container" style="padding:20px;">
-                <div class="text-center">
-                  <img src="C:\Users\mynam\Documents\Website\CVT new photos\human.jpg"
-                  class="rounded-circle" width="180px" height="180px"
-                  style="padding-bottom:20px;" alt="Human">
-                  <h5 style="padding-bottom:10px">Lisa Zhang</h5>
-                  <h7>Position</h7>
-                  <p>Description</p>
-                </div>
-              </div>
-            </div>
-
-            <!--second col-->
-            <div class="col">
-              <div class="container" style="padding:20px;">
-                <div class="text-center">
-                  <img src="C:\Users\mynam\Documents\Website\CVT new photos\human.jpg"
-                  class="rounded-circle" width="180px" height="180px"
-                  style="padding-bottom:20px;" alt="Human">
-                  <h5 style="padding-bottom:10px">Name</h5>
-                  <h7>Position</h7>
-                  <p>Description</p>
-                </div>
-              </div>
-            </div>
-
-            <!--third col-->
-            <div class="col">
-              <div class="container" style="padding:20px;">
-                <div class="text-center">
-                  <img src="C:\Users\mynam\Documents\Website\CVT new photos\human.jpg"
-                  class="rounded-circle" width="180px" height="180px"
-                  style="padding-bottom:20px;" alt="Human">
-                  <h5 style="padding-bottom:10px">Name</h5>
-                  <h7>Position</h7>
-                  <p>Description</p>
-                </div>
-              </div>
-            </div>
-
-          </div>
       </div>
 
-      <!--introduce team 2-->
-      <div class="container" style="padding-bottom:50px;">
-          <div class="row">
-
-              <!--first col -->
-            <div class="col">
-              <div class="container" style="padding:20px;">
-                <div class="text-center">
-                  <img src="C:\Users\mynam\Documents\Website\CVT new photos\human.jpg"
-                  class="rounded-circle" width="180px" height="180px"
-                  style="padding-bottom:20px;" alt="Human">
-                  <h5 style="padding-bottom:10px">Lisa Zhang</h5>
-                  <h7>Position</h7>
-                  <p>Description</p>
-                </div>
-              </div>
+      <div class="outer">
+        <!--mission statement-->
+          <div class="inner">
+            <div class="inner_cont">
+              <!--value-->
+              <h2>Our Values</h2>
+              <br />
+              <p>We have a highly experienced and passionate team dedicated to
+                providing quality services to our clients. Your reputation is our
+                reputation and we will never fail to protect both. With that said,
+                we value your company the same way we value our own; with the
+                utmost respect. Every interaction we have will be driven by
+                collaboration, transparency, and efficiency.</p>
             </div>
-
-            <!--second col-->
-            <div class="col">
-              <div class="container" style="padding:20px;">
-                <div class="text-center">
-                  <img src="C:\Users\mynam\Documents\Website\CVT new photos\human.jpg"
-                  class="rounded-circle" width="180px" height="180px"
-                  style="padding-bottom:20px;" alt="Human">
-                  <h5 style="padding-bottom:10px">Name</h5>
-                  <h7>Position</h7>
-                  <p>Description</p>
-                </div>
-              </div>
-            </div>
-
-            <!--third col-->
-            <div class="col">
-              <div class="container" style="padding:20px;">
-                <div class="text-center">
-                  <img src="C:\Users\mynam\Documents\Website\CVT new photos\human.jpg"
-                  class="rounded-circle" width="180px" height="180px"
-                  style="padding-bottom:20px;" alt="Human">
-                  <h5 style="padding-bottom:10px">Name</h5>
-                  <h7>Position</h7>
-                  <p>Description</p>
-                </div>
-              </div>
-            </div>
-
           </div>
-      </div>
-    </div>
+        </div>
+
+        <div class="outer" style="padding-bottom: 70px;">
+          <!--mission statement-->
+            <div class="inner">
+              <!--team-->
+              <div class="inner_cont">
+                <h2>Our Team</h2>
+                <br />
+                <p>Our people are the foundation of
+                our success. Calibration Validation Technologies (CVT) is formed by
+                experts who have consistently delivered over 15 years of quality
+                products and services to a multitude of manufacturers
+                (or lab testing analyst thing) of health care products.
+                CVT has always delivered effective solutions in effective,
+                cost-minimal, and timely manner to our clients’ needs. Within this
+                heavily regulated industry, CVT is the complete service solution by
+                specializing in Equipment Calibration, Validation, and
+                Qualification. CVT has greater than 100 years of combined
+                calibration and validation experience.  Our staff
+                utilize their experiences to decrease costs, increase
+                output and ensure quality.  With the industry and
+                regulatory expertise our employees share means that
+                the job gets done on time, under budget, and in a
+                compliant manner. </p>
+              </div>
+            </div>
+          </div>
 
 
     <!--footer-->
     <footer class="page-footer center-on-small-only pt-0"
-    style="background-color:rgb(18, 32, 106)">
+    style="background-color:rgb(1, 8, 46)">
 
-      <div style="background-color:rgb(19, 185, 237)">
+      <div style="background-color:rgb(80, 150, 203)">
         <div class="container">
           <!--grid row-->
           <div class="row py-4 d-flex align-items-center">
             <!--grid col-->
             <div class="col-md-5 col-lg-4 text-center text-md-left mb-4 mb-md-0">
-              <h6 class="mb-0" style="color:white">Get connected with us through</h6>
+              <h6 class="mb-0" style="color:rgb(210, 237, 251);">Get connected with us through</h6>
             </div>
 
             <div class="col-md-6 col-lg-7 text-center text-md-right">
               <!-- insert fb, linkedin  blah icons below-->
-              <a href="#" style="padding:10px;"><i class="fab fa-facebook-square fa-2x"></i></a>
-              <a href="#" style="padding:10px;"><i class="fab fa-twitter fa-2x"></i></a>
-              <a href="#" style="padding:10px;"><i class="fab fa-linkedin fa-2x"></i></a>
-
+              <a href="#" style="padding:10px; color:rgb(210, 237, 251);">
+                <i class="fab fa-facebook-square fa-2x"></i></a>
+              <a href="#" style="padding:10px; color:rgb(210, 237, 251);">
+                <i class="fab fa-twitter fa-2x"></i></a>
+              <a href="#" style="padding:10px; color:rgb(210, 237, 251);">
+                <i class="fab fa-linkedin fa-2x"></i></a>
             </div>
-
           </div>
-
         </div>
       </div>
 
