--- a/Restart.html
+++ b/Restart.html
@@ -76,14 +76,14 @@
           style="width: 963px;">
           <div class="carousel-caption d-none d-md-block">
             <h1>Welcome to Critical Validation Technologies</h1>
-            <h6>At Critical Validation Technologies (CVT) your reputation is our
+            <h5>At Critical Validation Technologies (CVT) your reputation is our
               reputation. Our expert staff will function in synergy with your
               organization to ensure your project becomes our project. With
               experience qualifying equipment and processes at pharmaceutical,
               nutraceutical, biopharmaceutical, and food companies throughout
               North America our experienced staff service your qualification
               needs. We get your equipment and processes up and running in a
-              quick compliant manner.</h6>
+              quick compliant manner.</h5>
           </div>
         </div>
         <div class="carousel-item">
@@ -91,11 +91,11 @@
           alt="Second Slide" style="width: 963px;">
           <div class="carousel-caption d-none d-md-block">
             <h1>Undoubtable Proficiency and Efficiency</h1>
-            <h6>With experience qualifying equipment and processes at
+            <h5>With experience qualifying equipment and processes at
               pharmaceutical, nutraceutical, biopharmaceutical, and food
               companies our technicians and scientists get your equipment and
               processes up and running in an efficient compliant manner.
-              </h6>
+            </h5>
           </div>
         </div>
         <div class="carousel-item">
@@ -103,101 +103,88 @@
           alt="Third Slide" style="width: 963px;">
           <div class="carousel-caption d-none d-md-block">
             <h1>Unbeatabe Expertise</h1>
-            <h6>Whether it’s a simple balance calibration or a challenging
+            <h5>Whether it’s a simple balance calibration or a challenging
               facility wide initiative we have the expertise.Production and
               laboratory equipment, computerized systems such as ERP and LIMs,
-              environmental monitoring, it’s second nature to us.</h6>
+              environmental monitoring, it’s second nature to us.</h5>
           </div>
         </div>
       </div>
     </div>
 
-
-    <div class="container">
-      <div class="container" style="padding-top:20px;">
-        <h2>Why Choose Us?</h2>
+    <!--rest of the page-->
+    <div class="sect sectHead">
+    </div>
+    <div class="sect sectOne">
+      <div class="container" style="padding-top:250px;">
+        <h1>Why Choose Us?</h1>
       </div>
-      <div class="container">
-        <p>Production and laboratory equipment, computerized systems such as
+    </div>
+    <div class="subSect">
+      <div class="container" style="padding-top: 70px;">
+        <h5>Production and laboratory equipment, computerized systems such as
           ERP and LIMs, environmental monitoring; it's second nature to us.
           Regardless whether you have a simple temperature mapping or a
           challenging facility wide validation initiative; we have the
           expertise. Qualification beyond Question - give us your timelines
-          and let us help you succeed</p>
-        <p>Your reputation is our reputation and as such; CVT work is
+          and let us help you succeed.</h5>
+          <br/>
+        <h5>Moreover, your reputation is our reputation. As such, CVT work is
           guaranteed. When the regulatory bodies knock on your door, they're
           knocking on ours. Our protocols and reports are extensive complete
           masterpieces of compliance. We're always proud to represent our
-          documents to the regulatory bodies. Call us for a quote regarding our
-          services which include our "Qualification Beyond Question" guarantee.</p>
+          documents to the regulatory bodies. Contact us for a quote regarding our
+          services which include our "Qualification Beyond Question" guarantee.</h5>
       </div>
     </div>
-    <!--three cards in a row-->
-    <div class="container" style="padding: 30px;">
-      <div class="container" style="padding-bottom:20px;">
-        <h2>Our Services</h2>
+    <div class="sect sectTwo">
+      <div class="container" style="padding-top:350px;">
+        <h1 style="color: white;">Our Services</h1>
       </div>
-      <div class="card-deck">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Equipment Calibration</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <button type="button" class="btn btn-outline-secondary" href="#">
-              Learn More >></a>
+    </div>
+    <div class="subSect">
+      <div class="container" style="padding-top: 70px;">
+        <div class="card-deck">
+          <div class="card" style="width: 18rem; border: 3px solid rgba(0, 0, 0, 0.125);
+          border-radius: 1rem;">
+            <img class="card-img-top" src="#" alt="Card Cap">
+            <div class="card-body">
+              <h5 class="card-title">Equipment Calibration</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button type="button" class="btn btn-outline-secondary" href="#">
+                Learn More >></a>
+            </div>
           </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Process Validation</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <button type="button" class="btn btn-outline-secondary" href="#">
-              Learn More >></a>
+          <div class="card" style="width: 18rem; border: 3px solid rgba(0, 0, 0, 0.125);
+          border-radius: 1rem;">
+            <img class="card-img-top" src="#" alt="Card Cap">
+            <div class="card-body">
+              <h5 class="card-title">Validation</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button type="button" class="btn btn-outline-secondary" href="#">
+                Learn More >></a>
+            </div>
           </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Equipment Qualification</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <button type="button" class="btn btn-outline-secondary" href="#">
-              Learn More >></a>
+          <div class="card" style="width: 18rem; border: 3px solid rgba(0, 0, 0, 0.125);
+          border-radius: 1rem;">
+            <img class="card-img-top" src="#" alt="Card Cap">
+            <div class="card-body">
+              <h5 class="card-title">Qualifications</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button type="button" class="btn btn-outline-secondary" href="#">
+                Learn More >></a>
+            </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <!-- row two-->
-      <div class="card-deck" style="padding-top:30px;">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Production Equipment Implementation and Service</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <button type="button" class="btn btn-outline-secondary" href="#">
-              Learn More >></a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Laboratory Equipment Setup and Service</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <button type="button" class="btn btn-outline-secondary" href="#">
-              Learn More >></a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Computer Systems Validation (CSV)</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <button type="button" class="btn btn-outline-secondary" href="#">
-              Learn More >></a>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!--footer-->
     <footer class="page-footer center-on-small-only pt-0"
-    style="background-color:rgb(18, 32, 106)">
+    style="background-color:rgb(1, 8, 46)">
 
-      <div style="background-color:rgb(19, 185, 237)">
+      <div style="background-color:rgb(80, 150, 203)">
         <div class="container">
           <!--grid row-->
           <div class="row py-4 d-flex align-items-center">
@@ -239,6 +226,11 @@
 
           <!--second col-->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-r">
+
+          </div>
+
+          <!--third col-->
+          <div class="col-md-3 col-lg-4 col-xl-4 mb-r">
             <h6 class="title font-bold" style="color:rgb(210, 237, 251)">
               <strong>Overview</strong></h6>
             <br class="accent-2 mb-4 mt-0 d-inline-block mx-auto"
@@ -248,21 +240,6 @@
             <p><a href="#" style="color:rgb(210, 237, 251)">Services</a></p>
             <p><a href="#" style="color:rgb(210, 237, 251)">News</a></p>
             <p><a href="#" style="color:rgb(210, 237, 251)">Testimonials</a></p>
-          </div>
-
-          <!--third col-->
-          <div class="col-md-3 col-lg-4 col-xl-4 mb-r">
-            <h6 class="title font-bold" style="color:rgb(210, 237, 251);">
-              <strong>Contact Details</strong></h6>
-            <br class="accent-2 mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px;">
-            <p style="color:rgb(210, 237, 251)">Canadian Number: (416) 623-7393</p>
-            <p style="color:rgb(210, 237, 251)">USA Number: (215) 989-4766</p>
-            <p style="color:rgb(210, 237, 251)">Fax: (647) 476-6401</p>
-            <p style="color:rgb(210, 237, 251)">Email:
-              <a href="mailto:services@calibrationvalidation.com">
-              services@calibrationvalidation.com</a></p>
-            <p style="color:rgb(210, 237, 251)">Address</p>
           </div>
         </div>
       </div>
