--- a/Restart.html
+++ b/Restart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Critical Validation Technologies</title>
     <link rel="stylesheet"
-      href="C:\Users\mynam\Documents\Website\css\bootstrap.css" rel="stylesheet"
+      href="C:\Users\mynam\Documents\Website\css\style.css" rel="stylesheet"
       media="screen">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
     integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
@@ -47,9 +47,6 @@
             <a class="nav-link" href="#">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">News</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
@@ -73,7 +70,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100" src="CVT new photos/BG.jpg"
-          style="width: 963px;">
+          style="width: 963px;"> <!--https://www.bucketlistly.blog/photos-->
           <div class="carousel-caption d-none d-md-block">
             <h1>Welcome to Critical Validation Technologies</h1>
             <h5>At Critical Validation Technologies (CVT) your reputation is our
@@ -87,9 +84,9 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="CVT new photos/test_tube_blur_slide2.jpg"
+          <img class="d-block w-100" src="CVT new photos/carousel2.jpg"
           alt="Second Slide" style="width: 963px;">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-md-block" style="color: gray;">
             <h1>Undoubtable Proficiency and Efficiency</h1>
             <h5>With experience qualifying equipment and processes at
               pharmaceutical, nutraceutical, biopharmaceutical, and food
@@ -99,14 +96,14 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="CVT new photos/lab_instrument_slide3.jpg"
+          <img class="d-block w-100" src="CVT new photos/c3.jpg"
           alt="Third Slide" style="width: 963px;">
           <div class="carousel-caption d-none d-md-block">
-            <h1>Unbeatabe Expertise</h1>
-            <h5>Whether it’s a simple balance calibration or a challenging
-              facility wide initiative we have the expertise.Production and
+            <h1 style="color:black;">Unbeatable Expertise</h1>
+            <h5 style="color:black;"><strong>Whether it’s a simple balance calibration or a challenging
+              facility wide initiative we have the expertise. Production and
               laboratory equipment, computerized systems such as ERP and LIMs,
-              environmental monitoring, it’s second nature to us.</h5>
+              environmental monitoring, it’s second nature to us.</strong></h5>
           </div>
         </div>
       </div>
@@ -116,61 +113,76 @@
     <div class="sect sectHead">
     </div>
     <div class="sect sectOne">
-      <div class="container" style="padding-top:250px;">
+      <div class="container" style="padding-top:200px;">
         <h1>Why Choose Us?</h1>
       </div>
     </div>
     <div class="subSect">
       <div class="container" style="padding-top: 70px;">
-        <h5>Production and laboratory equipment, computerized systems such as
+        <p>Production and laboratory equipment, computerized systems such as
           ERP and LIMs, environmental monitoring; it's second nature to us.
           Regardless whether you have a simple temperature mapping or a
           challenging facility wide validation initiative; we have the
           expertise. Qualification beyond Question - give us your timelines
-          and let us help you succeed.</h5>
+          and let us help you succeed.</p>
           <br/>
-        <h5>Moreover, your reputation is our reputation. As such, CVT work is
+        <p>Moreover, your reputation is our reputation. As such, CVT work is
           guaranteed. When the regulatory bodies knock on your door, they're
           knocking on ours. Our protocols and reports are extensive complete
           masterpieces of compliance. We're always proud to represent our
           documents to the regulatory bodies. Contact us for a quote regarding our
-          services which include our "Qualification Beyond Question" guarantee.</h5>
+          services which include our "Qualification Beyond Question" guarantee.</p>
       </div>
     </div>
     <div class="sect sectTwo">
-      <div class="container" style="padding-top:350px;">
+      <div class="container" style="padding-top:200px;">
         <h1 style="color: white;">Our Services</h1>
       </div>
     </div>
-    <div class="subSect">
+    <div class="subSect sectCard">
       <div class="container" style="padding-top: 70px;">
-        <div class="card-deck">
+        <p>Our services are sure to meet the highest of quality and most cost efficient.
+        From being compliant to industry standards to being specifically tailored,
+        we strive to ensure the services we provide to you will exceed beyond your expectations.</p>
+        <div class="card-deck" style="padding-top: 50px;">
           <div class="card" style="width: 18rem; border: 3px solid rgba(0, 0, 0, 0.125);
           border-radius: 1rem;">
-            <img class="card-img-top" src="#" alt="Card Cap">
-            <div class="card-body">
-              <h5 class="card-title">Equipment Calibration</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <button type="button" class="btn btn-outline-secondary" href="#">
-                Learn More >></a>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem; border: 3px solid rgba(0, 0, 0, 0.125);
-          border-radius: 1rem;">
-            <img class="card-img-top" src="#" alt="Card Cap">
+            <img class="card-img-top" src="./CVT new photos/valid.jpg" alt="Card Cap"> <!--photo by rawpixel-->
             <div class="card-body">
               <h5 class="card-title">Validation</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">From technology to processes, CVT will ensure
+                all of your equipments and facilities are compliant to the most
+                up to date regulations.
+              your </p>
+              <br/>
               <button type="button" class="btn btn-outline-secondary" href="#">
                 Learn More >></a>
             </div>
           </div>
           <div class="card" style="width: 18rem; border: 3px solid rgba(0, 0, 0, 0.125);
           border-radius: 1rem;">
-            <img class="card-img-top" src="#" alt="Card Cap">
+            <img class="card-img-top" src="./CVT new photos/eqQ.jpg" alt="Card Cap"> <!--photo by Jaron Nix-->
             <div class="card-body">
-              <h5 class="card-title">Qualifications</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Equipment Qualification</h5>
+              <p class="card-text">Quality is written in our core values and we
+              want nothing more than to ensure your assets all meet the
+              necessary qualification.
+              </p>
+              <br/>
+              <br/>
+              <button type="button" class="btn btn-outline-secondary" href="link#validation">
+                Learn More >></a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem; border: 3px solid rgba(0, 0, 0, 0.125);
+          border-radius: 1rem;">
+            <img class="card-img-top" src="./CVT new photos/training.jpg" alt="Card Cap"> <!--stefan stefancik-->
+            <div class="card-body">
+              <h5 class="card-title">Training/Consultation</h5>
+              <p class="card-text">
+              With the highly technical nature of manufacturing heavily regulated
+              products, we want to ensure your team is prepared and trained for
+              all scenario. Our consultants are here to serve your team.</p>
               <button type="button" class="btn btn-outline-secondary" href="#">
                 Learn More >></a>
             </div>
@@ -180,90 +192,97 @@
     </div>
 
 
-    <!--footer-->
-    <footer class="page-footer center-on-small-only pt-0"
-    style="background-color:rgb(1, 8, 46)">
+      <!--footer-->
+      <footer class="page-footer center-on-small-only pt-0"
+      style="background-color:rgb(1, 8, 46)">
 
-      <div style="background-color:rgb(80, 150, 203)">
-        <div class="container">
-          <!--grid row-->
-          <div class="row py-4 d-flex align-items-center">
-            <!--grid col-->
-            <div class="col-md-5 col-lg-4 text-center text-md-left mb-4 mb-md-0">
-              <h6 class="mb-0" style="color:white">Get connected with us through</h6>
+        <div style="background-color:rgb(80, 150, 203)">
+          <div class="container">
+            <!--grid row-->
+            <div class="row py-4 d-flex align-items-center">
+              <!--grid col-->
+              <div class="col-md-5 col-lg-4 text-center text-md-left mb-4 mb-md-0">
+                <h6 class="mb-0" style="color:white">Get connected with us through</h6>
+              </div>
+
+              <div class="col-md-6 col-lg-7 text-center text-md-right">
+                <!-- insert fb, linkedin  blah icons below-->
+                <a href="#" style="padding:10px;"><i class="fab fa-facebook-square fa-2x"></i></a>
+                <a href="#" style="padding:10px;"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="#" style="padding:10px;"><i class="fab fa-linkedin fa-2x"></i></a>
+
+              </div>
+
             </div>
 
-            <div class="col-md-6 col-lg-7 text-center text-md-right">
-              <!-- insert fb, linkedin  blah icons below-->
-              <a href="#" style="padding:10px;"><i class="fab fa-facebook-square fa-2x"></i></a>
-              <a href="#" style="padding:10px;"><i class="fab fa-twitter fa-2x"></i></a>
-              <a href="#" style="padding:10px;"><i class="fab fa-linkedin fa-2x"></i></a>
-
-            </div>
-
-          </div>
-
-        </div>
-      </div>
-
-      <div class="container at-5 mb-4 text-center text-md-left">
-        <div class="row at-3">
-
-          <!--first col-->
-          <div class="col-md-3 col-lg-4 col-xl-3 mb-r">
-            <h6 class="title" style="color:rgb(210, 237, 251);">
-              <strong>Contact Details</strong></h6>
-            <br class="accent-2 mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px;">
-            <p style="color:rgb(210, 237, 251)">Canadian Number: (416) 623-7393</p>
-            <p style="color:rgb(210, 237, 251)">USA Number: (215) 989-4766</p>
-            <p style="color:rgb(210, 237, 251)">Fax: (647) 476-6401</p>
-            <p style="color:rgb(210, 237, 251)">Email:
-              <a href="mailto:services@calibrationvalidation.com">
-              services@calibrationvalidation.com</a></p>
-            <p style="color:rgb(210, 237, 251)">Address</p>
-          </div>
-
-          <!--second col-->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-r">
-
-          </div>
-
-          <!--third col-->
-          <div class="col-md-3 col-lg-4 col-xl-4 mb-r">
-            <h6 class="title font-bold" style="color:rgb(210, 237, 251)">
-              <strong>Overview</strong></h6>
-            <br class="accent-2 mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px;">
-            <p><a href="#" style="color:rgb(210, 237, 251)">Home</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">About Us</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">Services</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">News</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">Testimonials</a></p>
           </div>
         </div>
-      </div>
+
+        <div class="container" style="padding-top:35px; border-spacing: 10px;">
+          <table>
+            <tr>
+              <th>
+                <h6 style="Color:rgb(210, 237, 251);"><strong>Contact Details</strong></h6>
+              </th>
+              <th>
+                <h6 style="Color:rgb(210, 237, 251);"><strong>News</strong></h6>
+              </th>
+              <th>
+                <h6 style="Color:rgb(210, 237, 251);"><strong>Overview</strong></h6>
+              </th>
+            </tr>
+
+            <tr>
+              <td style="color:rgb(210, 237, 251)">Canadian Number: (416) 623-7393</td>
+              <td><a target="_blank"
+              href="http://www.controlengeurope.com/article/157357/Improving-pharmaceutical-productivity.aspx"
+              style="text-align:left;">
+                Improving Pharmaceutical Productivity</a></td>
+              <td><a href="#" style="color:rgb(210, 237, 251); text-decoration:none;">Home</a></td>
+            </tr>
+
+            <tr>
+              <td style="color:rgb(210, 237, 251)">USA Number: (215) 989-4766</td>
+              <td rowspan="2"><a target="_blank"
+              href="http://www.pharmexec.com/rise-digital-technologies-changing-patient-and-hcp-expectations-pharma">
+              Rise in Digital Technologies Changing Patients <br/>
+              and HCP Expectations for Pharma</a></td>
+              <td><a href="#" style="color:rgb(210, 237, 251); text-decoration:none;">About Us</a></td>
+            </tr>
+
+            <tr>
+              <td style="color:rgb(210, 237, 251)">Fax: (647) 476-6401</td>
+              <td><a href="#" style="color:rgb(210, 237, 251); text-decoration:none;">Services</a></td>
+            </tr>
+
+            <tr>
+              <td style="color:rgb(210, 237, 251)">
+                Email:
+                <a href="mailto:services@calibrationvalidation.com">
+                services@calibrationvalidation.com</a></td>
+              <td><a target="_blank"
+              href="https://www.bloomberg.com/news/articles/2018-08-13/the-unlikely-source-of-a-healthtech-revolution">
+              The Unlikely Source of a Healthtech Revolution
+              </a></td>
+              <td><a href="#"
+                style="color:rgb(210, 237, 251); text-decoration:none;">
+                Contact</a></td>
+            </tr>
+          </table>
+        </div>
+    <div class="footer-copyright" style="text-align:center;">
+      <div class="container-fluid" style="color:rgb(128, 126, 128);
+            padding:20px;">
+        Copyright &copy; 2018 Critical Validation Technologies (CVT) Inc. All Rights Reserved</div>
+    </div>
+  </footer>
 
 
-      <div class="footer-copyright" style="text-align:center;">
-        <div class="container-fluid" style="color:rgb(128, 126, 128);
-        padding:20px;">
-          Copyright &copy; 2018 Critical Validation Technologies (CVT) Inc.
-          All Rights Reserved</div>
-      </div>
-    </footer>
+<!--scripts-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
+</body>
 
-    <!--scripts-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-    integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-    crossorigin="anonymous"></script>
-
-  </body>
 </html>
