--- a/contact_us.html
+++ b/contact_us.html
@@ -74,10 +74,10 @@
       </div>
     </nav>
 
-    <div class="outer">
+    <div class="outer" style="padding-top: 120px;">
       <div class="inner">
-        <div class="container" style="padding-top:100px; text-align:center;">
-          <h2 style="text-align:center; padding-top: 30px;">Contact Us</h2>
+        <div class="container" style="text-align:center;">
+          <h2 style="text-align:center; padding-top: 50px;">Contact Us</h2>
           <p>For any other questions you may have or for a quote,
             be sure to contact us!<br/>
             Please free to call us, email us, or shoot us a message through the form below.<br/>
@@ -86,33 +86,51 @@
 
         <!--input boxes and map-->
 
-      	<div class="container" style="padding-bottom: 30px;">
+      	<div class="container" style="padding-left: 50px; padding-right: 50px;
+        padding-bottom: 30px;">
       		<div class="row" style="padding-top: 10px;">
-      			<!-- input boxes-->
-      			<div class="col mb-2">
-      			  <form>
-      					<label for="fullName">Full Name</label>
-      					<input type="text" class="form-control"
-      					id="fullName" placeholder="John Smith" required>
+      		<!-- input boxes-->
 
+      		  <div class="col mb-2">
+              <form id="contactForm" method="POST" action="contact.php" role="form"
+              enctype="multipart/form-data">
+                <div class="form-group">
+          				<label for="fullName">Full Name</label>
+          				<input type="text" class="form-control" name="name"
+          				id="fullName" placeholder="John Smith" required="required"
+                  data-error="Firstname is required">
+                  <div class="help-block with-errors"></div>
+                </div>
 
-      					<label for="phoneNumber">Phone Number</label>
-      					<input type="number" class="form-control"
-      					id="phoneNumber" placeholder="(   )-    ">
+                <div class="form-group">
+                  <label for="phoneNumber">Phone Number</label>
+        					<input type="number" class="form-control" name="phoneNumber"
+        					id="phoneNumber" placeholder="(   )-    " required="required"
+                  maxlength="10" data-error="Phone number is required">
+                  <div class="help-block with-errors"></div>
+                </div>
 
-        				<label for="email">Email address</label>
-        				<input type="email" class="form-control"
-        				id="email" placeholder="name@example.com">
+                <div class="form-group">
+                  <label for="email">Email address</label>
+            			<input type="email" class="form-control" name="email"
+            			id="email" placeholder="name@example.com" required="required"
+                  data-error="Email address is required">
+                  <div class="help-block with-errors"></div>
+                </div>
 
-      				<div class="form-group-lg">
-      				  <label for="message">Message</label>
-      				  <textarea class="form-control" id="message" rows="5"></textarea>
-      				</div>
-      				<div class="container-fluid" style="padding-top:20px;">
-      					<button class="btn btn-secondary" type="submit">Submit form</button>
-      				</div>
-      			  </form>
-      			 </div>
+        				<div class="form-group-lg">
+        				  <label for="message">Message</label>
+        				  <textarea class="form-control" name="message" rows="5"
+                  data-error="Message is required"></textarea>
+        				</div>
+        				<div class="container-fluid" style="padding-top:20px;">
+        					<button class="btn btn-secondary" type="submit">Submit form</button>
+        				</div>
+              </form>
+              <p class="text-muted" style="padding-top:20px;">
+                <strong>*</strong>These fields are required.
+              </p>
+             </div>
 
 
       			 <!--map-->
@@ -140,103 +158,97 @@
 
 
 
+<!--footer-->
+<footer class="page-footer center-on-small-only pt-0"
+style="background-color:rgb(1, 8, 46)">
 
-    <!--footer-->
-    <footer class="page-footer center-on-small-only pt-0"
-    style="background-color:rgb(1, 8, 46)">
+  <div style="background-color:rgb(80, 150, 203)">
+    <div class="container">
+      <!--grid row-->
+      <div class="row py-4 d-flex align-items-center">
+        <!--grid col-->
+        <div class="col-md-5 col-lg-4 text-center text-md-left mb-4 mb-md-0">
+          <h6 class="mb-0" style="color:white">Get connected with us through</h6>
+        </div>
 
-      <div style="background-color:rgb(80, 150, 203)">
-        <div class="container">
-          <!--grid row-->
-          <div class="row py-4 d-flex align-items-center">
-            <!--grid col-->
-            <div class="col-md-5 col-lg-4 text-center text-md-left mb-4 mb-md-0">
-              <h6 class="mb-0" style="color:rgb(233, 240, 238)">Get connected with us through</h6>
-            </div>
-
-            <div class="col-md-6 col-lg-7 text-center text-md-right">
-              <!-- insert fb, linkedin  blah icons below-->
-              <a href="#" style="padding:10px; color:rgb(233, 240, 238)">
-                <i class="fab fa-facebook-square fa-2x"></i></a>
-              <a href="#" style="padding:10px; color:rgb(233, 240, 238)">
-                <i class="fab fa-twitter fa-2x"></i></a>
-              <a href="#" style="padding:10px; color:rgb(233, 240, 238)">
-                <i class="fab fa-linkedin fa-2x"></i></a>
-
-            </div>
-
-          </div>
+        <div class="col-md-6 col-lg-7 text-center text-md-right">
+          <!-- insert fb, linkedin  blah icons below-->
+          <a href="#" style="padding:10px;"><i class="fab fa-facebook-square fa-2x"></i></a>
+          <a href="#" style="padding:10px;"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="#" style="padding:10px;"><i class="fab fa-linkedin fa-2x"></i></a>
 
         </div>
+
       </div>
 
-      <div class="container at-5 mb-4 text-center text-md-left">
-        <div class="row at-3">
+    </div>
+  </div>
 
-          <!--first col-->
-          <div class="col-md-3 col-lg-4 col-xl-3 mb-r">
-            <h6 class="title" style="color:rgb(210, 237, 251);">
-              <strong>Contact Details</strong></h6>
-            <br class="accent-2 mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px;">
-            <p style="color:rgb(210, 237, 251)">Canadian Number: (416) 623-7393</p>
-            <p style="color:rgb(210, 237, 251)">USA Number: (215) 989-4766</p>
-            <p style="color:rgb(210, 237, 251)">Fax: (647) 476-6401</p>
-            <p style="color:rgb(210, 237, 251)">Email:
-              <a href="mailto:services@calibrationvalidation.com">
-              services@calibrationvalidation.com</a></p>
-            <p style="color:rgb(210, 237, 251)">Address</p>
-          </div>
+  <div class="container" style="padding-top:35px; border-spacing: 10px;">
+    <table>
+      <tr>
+        <th>
+          <h6 style="Color:rgb(210, 237, 251);"><strong>Contact Details</strong></h6>
+        </th>
+        <th>
+          <h6 style="Color:rgb(210, 237, 251);"><strong>News</strong></h6>
+        </th>
+        <th>
+          <h6 style="Color:rgb(210, 237, 251);"><strong>Overview</strong></h6>
+        </th>
+      </tr>
 
-          <!--second col-->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-r">
-            <h6 class="title font-bold" style="color:rgb(210, 237, 251)">
-              <strong>Overview</strong></h6>
-            <br class="accent-2 mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px;">
-            <p><a href="#" style="color:rgb(210, 237, 251)">Home</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">About Us</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">Services</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">News</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">Testimonials</a></p>
-          </div>
+      <tr>
+        <td style="color:rgb(210, 237, 251)">Canadian Number: (416) 623-7393</td>
+        <td><a target="_blank"
+        href="http://www.controlengeurope.com/article/157357/Improving-pharmaceutical-productivity.aspx"
+        style="text-align:left;">
+          Improving Pharmaceutical Productivity</a></td>
+        <td><a href="#" style="color:rgb(210, 237, 251); text-decoration:none;">Home</a></td>
+      </tr>
 
-          <!--third col-->
-          <div class="col-md-3 col-lg-4 col-xl-4 mb-r">
-            <h6 class="title font-bold" style="color:rgb(210, 237, 251);">
-              <strong>Contact Details</strong></h6>
-            <br class="accent-2 mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px;">
-            <p style="color:rgb(210, 237, 251)">Canadian Number: (416) 623-7393</p>
-            <p style="color:rgb(210, 237, 251)">USA Number: (215) 989-4766</p>
-            <p style="color:rgb(210, 237, 251)">Fax: (647) 476-6401</p>
-            <p style="color:rgb(210, 237, 251)">Email:
-              <a href="mailto:services@calibrationvalidation.com">
-              services@calibrationvalidation.com</a></p>
-            <p style="color:rgb(210, 237, 251)">Address</p>
-          </div>
-        </div>
-      </div>
+      <tr>
+        <td style="color:rgb(210, 237, 251)">USA Number: (215) 989-4766</td>
+        <td rowspan="2"><a target="_blank"
+        href="http://www.pharmexec.com/rise-digital-technologies-changing-patient-and-hcp-expectations-pharma">
+        Rise in Digital Technologies Changing Patients <br/>
+        and HCP Expectations for Pharma</a></td>
+        <td><a href="#" style="color:rgb(210, 237, 251); text-decoration:none;">About Us</a></td>
+      </tr>
+
+      <tr>
+        <td style="color:rgb(210, 237, 251)">Fax: (647) 476-6401</td>
+        <td><a href="#" style="color:rgb(210, 237, 251); text-decoration:none;">Services</a></td>
+      </tr>
+
+      <tr>
+        <td style="color:rgb(210, 237, 251)">
+          Email:
+          <a href="mailto:services@calibrationvalidation.com">
+          services@calibrationvalidation.com</a></td>
+        <td><a target="_blank"
+        href="https://www.bloomberg.com/news/articles/2018-08-13/the-unlikely-source-of-a-healthtech-revolution">
+        The Unlikely Source of a Healthtech Revolution
+        </a></td>
+        <td><a href="#"
+          style="color:rgb(210, 237, 251); text-decoration:none;">
+          Contact</a></td>
+      </tr>
+    </table>
+  </div>
+<div class="footer-copyright" style="text-align:center;">
+<div class="container-fluid" style="color:rgb(128, 126, 128);
+      padding:20px;">
+  Copyright &copy; 2018 Critical Validation Technologies (CVT) Inc. All Rights Reserved</div>
+</div>
+</footer>
 
 
-      <div class="footer-copyright" style="text-align:center;">
-        <div class="container-fluid" style="color:rgb(128, 126, 128);
-        padding:20px;">
-          Copyright &copy; 2018 Critical Validation Technologies (CVT) Inc.
-          All Rights Reserved</div>
-      </div>
-    </footer>
+<!--scripts-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
-        <!--scripts-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-    integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-    crossorigin="anonymous"></script>
-  </body>
+</body>
 
 </html>
