--- a/our_services.html
+++ b/our_services.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -45,9 +45,6 @@
             <a class="nav-link" href="#">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">News</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
@@ -60,16 +57,21 @@
       </div>
     </nav>
 
-
+    <!-- jumbotron -->
+    <div class="sect serviceHeader">
+      <div class="container" style="padding-top:250px; text-align: center;">
+        <h1>Our Services</h1>
+      </div>
+    </div>
 
     <!--Validation-->
     <a id="validation">
 
       <!--technology-->
-      <h1 class="container" style="padding-top:130px;">Validation</h1>
-      <div class="outer" style="padding-top:20px;">
-        <div class="inner" style="padding: 30px;">
-          <div class="container" style="text-align: left;">
+      <!--h1 class="container" style="padding-top:30px;">Validation</h1-->
+      <!--div class="outer" style="padding-top:20px;"-->
+        <div class="inner" style="padding: 40px;">
+          <div class="container" style="text-align: center;">
             <h2>Technology Validation</h2>
           </div>
           <div class="container" style="padding-top:10px; padding-bottom: 20px;
@@ -171,9 +173,9 @@
       </div>
 
       <!--process validation-->
-      <div class="outer" style="padding-top:10px;">
+      <!--div class="outer" style="padding-top:10px;"-->
         <div class="inner" style="padding: 30px;">
-          <div class="container" style="text-align: left;">
+          <div class="container" style="text-align: center;">
             <h2>Process Validation</h2>
           </div>
           <div class="container" style="padding-top:10px; padding-bottom: 20px;
@@ -203,7 +205,7 @@
                   </p>
 
                 <!--/div-->
-              </div>
+                </div>
               <div class="collapse" id="mastValid">
                 <div class="card card-body">
                   A Validation Plan is a document which provides a high level
@@ -218,8 +220,6 @@
             </div>
 
             <div class="col-sm">
-              <!--div class="card text-black bg-success mb-3 h-100"
-              style="max-width: 18rem;"-->
                 <div class="card-body">
                   <p>
                     <a class="btn btn-lightPrimary" data-toggle="collapse"
@@ -269,16 +269,15 @@
 
           </div>
         </div>
-      </div>
     </a>
 
 
     <!--Qualifications-->
     <a id="qualification">
-      <h1 class="container" style="padding-top:100px;">Qualifications</h1>
-      <div class="outer" style="padding-top:20px;">
+      <!--h1 class="container" style="padding-top:100px;">Qualifications</h1-->
+      <!--div class="outer" style="padding-top:20px;"-->
         <div class="inner" style="padding: 30px;">
-          <div class="container" style="text-align: left;">
+          <div class="container" style="text-align: center;">
             <h2>Equipment Qualifications</h2>
           </div>
           <div class="container" style="padding-top:10px; padding-bottom: 20px;
@@ -375,15 +374,14 @@
 
           </div>
         </div>
-      </div>
     </a>
 
     <!--Training/Consultation-->
     <a id="T/C">
-      <h1 class="container" style="padding-top:100px;">Training/Consultation</h1>
-      <div class="outer" style="padding-top:20px;">
+      <!--h1 class="container" style="padding-top:100px;">Training/Consultation</h1-->
+      <!--div class="outer" style="padding-top:20px;"-->
         <div class="inner" style="padding: 30px;">
-          <div class="container" style="text-align: left;">
+          <div class="container" style="text-align: center;">
             <h2>Training/Consultation</h2>
           </div>
           <div class="container" style="padding-top:10px; padding-bottom: 20px;
@@ -476,96 +474,101 @@
 
           </div>
         </div>
-      </div>
     </a>
 
 
 
-    <!--footer-->
-    <footer class="page-footer center-on-small-only pt-0"
-    style="background-color:rgb(1, 8, 46)">
+<!--footer-->
+<footer class="page-footer center-on-small-only pt-0"
+style="background-color:rgb(1, 8, 46)">
 
-      <div style="background-color:rgb(80, 150, 203)">
-        <div class="container">
-          <!--grid row-->
-          <div class="row py-4 d-flex align-items-center">
-            <!--grid col-->
-            <div class="col-md-5 col-lg-4 text-center text-md-left mb-4 mb-md-0">
-              <h6 class="mb-0" style="color:white">Get connected with us through</h6>
-            </div>
+  <div style="background-color:rgb(80, 150, 203)">
+    <div class="container">
+      <!--grid row-->
+      <div class="row py-4 d-flex align-items-center">
+        <!--grid col-->
+        <div class="col-md-5 col-lg-4 text-center text-md-left mb-4 mb-md-0">
+          <h6 class="mb-0" style="color:white">Get connected with us through</h6>
+        </div>
 
-            <div class="col-md-6 col-lg-7 text-center text-md-right">
-              <!-- insert fb, linkedin  blah icons below-->
-              <a href="#" style="padding:10px;"><i class="fab fa-facebook-square fa-2x"></i></a>
-              <a href="#" style="padding:10px;"><i class="fab fa-twitter fa-2x"></i></a>
-              <a href="#" style="padding:10px;"><i class="fab fa-linkedin fa-2x"></i></a>
-
-            </div>
-
-          </div>
+        <div class="col-md-6 col-lg-7 text-center text-md-right">
+          <!-- insert fb, linkedin  blah icons below-->
+          <a href="#" style="padding:10px;"><i class="fab fa-facebook-square fa-2x"></i></a>
+          <a href="#" style="padding:10px;"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="#" style="padding:10px;"><i class="fab fa-linkedin fa-2x"></i></a>
 
         </div>
+
       </div>
 
-      <div class="container at-5 mb-4 text-center text-md-left">
-        <div class="row at-3">
+    </div>
+  </div>
 
-          <!--first col-->
-          <div class="col-md-3 col-lg-4 col-xl-3 mb-r">
-            <h6 class="title" style="color:rgb(210, 237, 251);">
-              <strong>Contact Details</strong></h6>
-            <br class="accent-2 mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px;">
-            <p style="color:rgb(210, 237, 251)">Canadian Number: (416) 623-7393</p>
-            <p style="color:rgb(210, 237, 251)">USA Number: (215) 989-4766</p>
-            <p style="color:rgb(210, 237, 251)">Fax: (647) 476-6401</p>
-            <p style="color:rgb(210, 237, 251)">Email:
-              <a href="mailto:services@calibrationvalidation.com">
-              services@calibrationvalidation.com</a></p>
-            <p style="color:rgb(210, 237, 251)">Address</p>
-          </div>
+  <div class="container" style="padding-top:35px; border-spacing: 10px;">
+    <table>
+      <tr>
+        <th>
+          <h6 style="Color:rgb(210, 237, 251);"><strong>Contact Details</strong></h6>
+        </th>
+        <th>
+          <h6 style="Color:rgb(210, 237, 251);"><strong>News</strong></h6>
+        </th>
+        <th>
+          <h6 style="Color:rgb(210, 237, 251);"><strong>Overview</strong></h6>
+        </th>
+      </tr>
 
-          <!--second col-->
-          <div class="col-md-2 col-lg-2 col-xl-3 mx-auto mb-r"><!--xl-3 moves heading left and right-->
-            <h6 class="title" style="color:rgb(210, 237, 251);">
-              <strong>News</strong></h6>
-          </div>
+      <tr>
+        <td style="color:rgb(210, 237, 251)">Canadian Number: (416) 623-7393</td>
+        <td><a target="_blank"
+        href="http://www.controlengeurope.com/article/157357/Improving-pharmaceutical-productivity.aspx"
+        style="text-align:left;">
+          Improving Pharmaceutical Productivity</a></td>
+        <td><a href="#" style="color:rgb(210, 237, 251); text-decoration:none;">Home</a></td>
+      </tr>
 
-          <!--third col-->
-          <div class="col-md-3 col-lg-4 col-xl-3 mb-r">
-            <h6 class="title font-bold" style="color:rgb(210, 237, 251)">
-              <strong>Overview</strong></h6>
-            <br class="accent-2 mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px;">
-            <p><a href="#" style="color:rgb(210, 237, 251)">Home</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">About Us</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">Services</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">News</a></p>
-            <p><a href="#" style="color:rgb(210, 237, 251)">Testimonials</a></p>
-          </div>
-        </div>
-      </div>
+      <tr>
+        <td style="color:rgb(210, 237, 251)">USA Number: (215) 989-4766</td>
+        <td rowspan="2"><a target="_blank"
+        href="http://www.pharmexec.com/rise-digital-technologies-changing-patient-and-hcp-expectations-pharma">
+        Rise in Digital Technologies Changing Patients <br/>
+        and HCP Expectations for Pharma</a></td>
+        <td><a href="#" style="color:rgb(210, 237, 251); text-decoration:none;">About Us</a></td>
+      </tr>
+
+      <tr>
+        <td style="color:rgb(210, 237, 251)">Fax: (647) 476-6401</td>
+        <td><a href="#" style="color:rgb(210, 237, 251); text-decoration:none;">Services</a></td>
+      </tr>
+
+      <tr>
+        <td style="color:rgb(210, 237, 251)">
+          Email:
+          <a href="mailto:services@calibrationvalidation.com">
+          services@calibrationvalidation.com</a></td>
+        <td><a target="_blank"
+        href="https://www.bloomberg.com/news/articles/2018-08-13/the-unlikely-source-of-a-healthtech-revolution">
+        The Unlikely Source of a Healthtech Revolution
+        </a></td>
+        <td><a href="#"
+          style="color:rgb(210, 237, 251); text-decoration:none;">
+          Contact</a></td>
+      </tr>
+    </table>
+  </div>
+<div class="footer-copyright" style="text-align:center;">
+<div class="container-fluid" style="color:rgb(128, 126, 128);
+      padding:20px;">
+  Copyright &copy; 2018 Critical Validation Technologies (CVT) Inc. All Rights Reserved</div>
+</div>
+</footer>
 
 
-      <div class="footer-copyright" style="text-align:center;">
-        <div class="container-fluid" style="color:rgb(128, 126, 128);
-        padding:20px;">
-          Copyright &copy; 2018 Critical Validation Technologies (CVT) Inc.
-          All Rights Reserved</div>
-      </div>
-    </footer>
+<!--scripts-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
+</body>
 
-    <!--scripts-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-    integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-    crossorigin="anonymous"></script>
-
-  </body>
 </html>
